[package]
name = "ngofl"
version = "1.1.1"
edition = "2024"

[dependencies]
colorous = "1.0.16"
eframe = "0.34.3"
egui = "0.34.3"
egui_plot = "0.35.0"
rand = { version = "0.10.1", default-features = false, features = ["std_rng"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
